sandbox/graphblas/GraphBLAS.h


typedef uint64_t GrB_Index ;
typedef enum
{
    GrB_SUCCESS = 0,            
    GrB_NO_VALUE = 1,           
    GxB_EXHAUSTED = 2,          
    GrB_UNINITIALIZED_OBJECT = -1,  
    GrB_NULL_POINTER = -2,          
    GrB_INVALID_VALUE = -3,         
    GrB_INVALID_INDEX = -4,         
    GrB_DOMAIN_MISMATCH = -5,       
    GrB_DIMENSION_MISMATCH = -6,    
    GrB_OUTPUT_NOT_EMPTY = -7,      
    GrB_NOT_IMPLEMENTED = -8,       
    GrB_PANIC = -101,               
    GrB_OUT_OF_MEMORY = -102,       
    GrB_INSUFFICIENT_SPACE = -103,  
    GrB_INVALID_OBJECT = -104,      
    GrB_INDEX_OUT_OF_BOUNDS = -105, 
    GrB_EMPTY_OBJECT = -106         
}
GrB_Info ;
typedef struct GB_Type_opaque *GrB_Type ;
typedef struct GB_BinaryOp_opaque *GrB_BinaryOp ;
typedef struct GB_IndexUnaryOp_opaque *GrB_IndexUnaryOp ;
extern GrB_IndexUnaryOp
    GrB_ROWINDEX_INT32,  GrB_ROWINDEX_INT64,
    GrB_COLINDEX_INT32,  GrB_COLINDEX_INT64,
    GrB_DIAGINDEX_INT32, GrB_DIAGINDEX_INT64,
    GrB_TRIL,
    GrB_TRIU,
    GrB_DIAG,
    GrB_OFFDIAG,
    GrB_COLLE,
    GrB_COLGT,
    GrB_ROWLE,
    GrB_ROWGT,
    GrB_VALUEEQ_INT8,  GrB_VALUEEQ_UINT8,  GrB_VALUEEQ_FP32, GrB_VALUEEQ_BOOL,
    GrB_VALUEEQ_INT16, GrB_VALUEEQ_UINT16, GrB_VALUEEQ_FP64,
    GrB_VALUEEQ_INT32, GrB_VALUEEQ_UINT32, GxB_VALUEEQ_FC32,
    GrB_VALUEEQ_INT64, GrB_VALUEEQ_UINT64, GxB_VALUEEQ_FC64,
    GrB_VALUENE_INT8,  GrB_VALUENE_UINT8,  GrB_VALUENE_FP32, GrB_VALUENE_BOOL,
    GrB_VALUENE_INT16, GrB_VALUENE_UINT16, GrB_VALUENE_FP64,
    GrB_VALUENE_INT32, GrB_VALUENE_UINT32, GxB_VALUENE_FC32,
    GrB_VALUENE_INT64, GrB_VALUENE_UINT64, GxB_VALUENE_FC64,
    GrB_VALUELT_INT8,  GrB_VALUELT_UINT8,  GrB_VALUELT_FP32, GrB_VALUELT_BOOL,
    GrB_VALUELT_INT16, GrB_VALUELT_UINT16, GrB_VALUELT_FP64,
    GrB_VALUELT_INT32, GrB_VALUELT_UINT32,
    GrB_VALUELT_INT64, GrB_VALUELT_UINT64,
    GrB_VALUELE_INT8,  GrB_VALUELE_UINT8,  GrB_VALUELE_FP32, GrB_VALUELE_BOOL,
    GrB_VALUELE_INT16, GrB_VALUELE_UINT16, GrB_VALUELE_FP64,
    GrB_VALUELE_INT32, GrB_VALUELE_UINT32,
    GrB_VALUELE_INT64, GrB_VALUELE_UINT64,
    GrB_VALUEGT_INT8,  GrB_VALUEGT_UINT8,  GrB_VALUEGT_FP32, GrB_VALUEGT_BOOL,
    GrB_VALUEGT_INT16, GrB_VALUEGT_UINT16, GrB_VALUEGT_FP64,
    GrB_VALUEGT_INT32, GrB_VALUEGT_UINT32,
    GrB_VALUEGT_INT64, GrB_VALUEGT_UINT64,
    GrB_VALUEGE_INT8,  GrB_VALUEGE_UINT8,  GrB_VALUEGE_FP32, GrB_VALUEGE_BOOL,
    GrB_VALUEGE_INT16, GrB_VALUEGE_UINT16, GrB_VALUEGE_FP64,
    GrB_VALUEGE_INT32, GrB_VALUEGE_UINT32,
    GrB_VALUEGE_INT64, GrB_VALUEGE_UINT64 ;
typedef struct GB_Monoid_opaque *GrB_Monoid ;
extern
GrB_Info GrB_Monoid_new_BOOL        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    bool identity                   
) ;
extern
GrB_Info GrB_Monoid_new_INT8        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int8_t identity                 
) ;
extern
GrB_Info GrB_Monoid_new_UINT8       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint8_t identity                
) ;
extern
GrB_Info GrB_Monoid_new_INT16       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int16_t identity                
) ;
extern
GrB_Info GrB_Monoid_new_UINT16      
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint16_t identity               
) ;
extern
GrB_Info GrB_Monoid_new_INT32       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int32_t identity                
) ;
extern
GrB_Info GrB_Monoid_new_UINT32      
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint32_t identity               
) ;
extern
GrB_Info GrB_Monoid_new_INT64       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int64_t identity                
) ;
extern
GrB_Info GrB_Monoid_new_UINT64      
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint64_t identity               
) ;
extern
GrB_Info GrB_Monoid_new_FP32        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    float identity                  
) ;
extern
GrB_Info GrB_Monoid_new_FP64        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    double identity                 
) ;
extern
GrB_Info GxB_Monoid_new_FC32        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    GxB_FC32_t identity             
) ;
extern
GrB_Info GxB_Monoid_new_FC64        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    GxB_FC64_t identity             
) ;
extern
GrB_Info GrB_Monoid_new_UDT         
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    void *identity                  
) ;
extern
GrB_Info GxB_Monoid_terminal_new_BOOL        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    bool identity,                  
    bool terminal                   
) ;
extern
GrB_Info GxB_Monoid_terminal_new_INT8        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int8_t identity,                
    int8_t terminal                 
) ;
extern
GrB_Info GxB_Monoid_terminal_new_UINT8       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint8_t identity,               
    uint8_t terminal                
) ;
extern
GrB_Info GxB_Monoid_terminal_new_INT16       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int16_t identity,               
    int16_t terminal                
) ;
extern
GrB_Info GxB_Monoid_terminal_new_UINT16      
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint16_t identity,              
    uint16_t terminal               
) ;
extern
GrB_Info GxB_Monoid_terminal_new_INT32       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int32_t identity,               
    int32_t terminal                
) ;
extern
GrB_Info GxB_Monoid_terminal_new_UINT32      
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint32_t identity,              
    uint32_t terminal               
) ;
extern
GrB_Info GxB_Monoid_terminal_new_INT64       
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    int64_t identity,               
    int64_t terminal                
) ;
extern
GrB_Info GxB_Monoid_terminal_new_UINT64      
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    uint64_t identity,              
    uint64_t terminal               
) ;
extern
GrB_Info GxB_Monoid_terminal_new_FP32        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    float identity,                 
    float terminal                  
) ;
extern
GrB_Info GxB_Monoid_terminal_new_FP64        
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    double identity,                
    double terminal                 
) ;
extern
GrB_Info GxB_Monoid_terminal_new_FC32   
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    GxB_FC32_t identity,            
    GxB_FC32_t terminal             
) ;
extern
GrB_Info GxB_Monoid_terminal_new_FC64   
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    GxB_FC64_t identity,            
    GxB_FC64_t terminal             
) ;
extern
GrB_Info GxB_Monoid_terminal_new_UDT    
(
    GrB_Monoid *monoid,             
    GrB_BinaryOp op,                
    void *identity,                 
    void *terminal                  
) ;
extern
GrB_Info GxB_Monoid_operator        
(
    GrB_BinaryOp *op,               
    GrB_Monoid monoid               
) ;
extern
GrB_Info GxB_Monoid_identity        
(
    void *identity,                 
    GrB_Monoid monoid               
) ;
extern
GrB_Info GxB_Monoid_terminal        
(
    bool *has_terminal,             
    void *terminal,                 
    GrB_Monoid monoid               
) ;
extern
GrB_Info GrB_Monoid_free            
(
    GrB_Monoid *monoid              
) ;
typedef struct GB_Semiring_opaque *GrB_Semiring ;
extern
GrB_Info GrB_Semiring_new           
(
    GrB_Semiring *semiring,         
    GrB_Monoid add,                 
    GrB_BinaryOp multiply           
) ;
extern
GrB_Info GxB_Semiring_add           
(
    GrB_Monoid *add,                
    GrB_Semiring semiring           
) ;
extern
GrB_Info GxB_Semiring_multiply      
(
    GrB_BinaryOp *multiply,         
    GrB_Semiring semiring           
) ;
extern
GrB_Info GrB_Semiring_free          
(
    GrB_Semiring *semiring          
) ;
typedef struct GB_Scalar_opaque *GrB_Scalar ;   
extern
GrB_Info GrB_Scalar_new     
(
    GrB_Scalar *s,          
    GrB_Type type           
) ;
extern
GrB_Info GrB_Scalar_dup     
(
    GrB_Scalar *s,          
    const GrB_Scalar t      
) ;
extern
GrB_Info GrB_Scalar_clear   
(                           
    GrB_Scalar s            
) ;
extern
GrB_Info GrB_Scalar_nvals   
(
    GrB_Index *nvals,       
    const GrB_Scalar s      
) ;
extern
GrB_Info GxB_Scalar_type    
(
    GrB_Type *type,         
    const GrB_Scalar s      
) ;
extern
GrB_Info GxB_Scalar_type_name      
(
    char *type_name,        
    const GrB_Scalar s      
) ;
extern
GrB_Info GxB_Scalar_memoryUsage  
(
    size_t *size,           
    const GrB_Scalar s      
) ;
extern
GrB_Info GrB_Scalar_free    
(
    GrB_Scalar *s           
) ;
extern GrB_Info GxB_Scalar_new   (GrB_Scalar *s, GrB_Type type) ;
extern GrB_Info GxB_Scalar_dup   (GrB_Scalar *s, const GrB_Scalar t) ;
extern GrB_Info GxB_Scalar_clear (GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_nvals (GrB_Index *nvals, const GrB_Scalar s) ;
extern GrB_Info GxB_Scalar_free  (GrB_Scalar *s) ;