Packages_2024/graphblas_7.4.0/fp_graphblas.pas


  GrB_VALUENE_INT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_UINT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_FP32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_BOOL: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_INT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_UINT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_FP64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_INT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_UINT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GxB_VALUENE_FC32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_INT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUENE_UINT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GxB_VALUENE_FC64: TGrB_IndexUnaryOp; cvar;external libgraphblas;

  GrB_VALUELT_INT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_UINT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_FP32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_BOOL: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_INT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_UINT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_FP64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_INT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_UINT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_INT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELT_UINT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;

  GrB_VALUELE_INT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_UINT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_FP32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_BOOL: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_INT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_UINT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_FP64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_INT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_UINT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_INT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUELE_UINT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;

  GrB_VALUEGT_INT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_UINT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_FP32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_BOOL: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_INT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_UINT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_FP64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_INT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_UINT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_INT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGT_UINT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;

  GrB_VALUEGE_INT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_UINT8: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_FP32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_BOOL: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_INT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_UINT16: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_FP64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_INT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_UINT32: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_INT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;
  GrB_VALUEGE_UINT64: TGrB_IndexUnaryOp; cvar;external libgraphblas;

type
  PGrB_Monoid = ^TGrB_Monoid;
  TGrB_Monoid = Pointer;

function GrB_Monoid_new_BOOL(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: boolean): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_INT8(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint8_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_UINT8(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint8_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_INT16(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint16_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_UINT16(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint16_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_INT32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint32_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_UINT32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint32_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_INT64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint64_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_UINT64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint64_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_FP32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: single): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_FP64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: double): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_new_FC32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: TGxB_FC32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_new_FC64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: TGxB_FC64_t): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_new_UDT(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: pointer): TGrB_Info; cdecl; external libgraphblas;

function GxB_Monoid_terminal_new_BOOL(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: boolean; terminal: boolean): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_INT8(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint8_t; terminal: Tint8_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_UINT8(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint8_t; terminal: Tuint8_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_INT16(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint16_t; terminal: Tint16_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_UINT16(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint16_t; terminal: Tuint16_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_INT32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint32_t; terminal: Tint32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_UINT32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint32_t; terminal: Tuint32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_INT64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tint64_t; terminal: Tint64_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_UINT64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: Tuint64_t; terminal: Tuint64_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_FP32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: single; terminal: single): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_FP64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: double; terminal: double): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_FC32(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: TGxB_FC32_t; terminal: TGxB_FC32_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_FC64(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: TGxB_FC64_t; terminal: TGxB_FC64_t): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal_new_UDT(monoid: PGrB_Monoid; op: TGrB_BinaryOp; identity: pointer; terminal: pointer): TGrB_Info; cdecl; external libgraphblas;

function GxB_Monoid_operator(op: PGrB_BinaryOp; monoid: TGrB_Monoid): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_identity(identity: pointer; monoid: TGrB_Monoid): TGrB_Info; cdecl; external libgraphblas;
function GxB_Monoid_terminal(has_terminal: PBoolean; terminal: pointer; monoid: TGrB_Monoid): TGrB_Info; cdecl; external libgraphblas;
function GrB_Monoid_free(monoid: PGrB_Monoid): TGrB_Info; cdecl; external libgraphblas;

type
  PGrB_Semiring = ^TGrB_Semiring;
  TGrB_Semiring = Pointer;

function GrB_Semiring_new(semiring: PGrB_Semiring; add: TGrB_Monoid; multiply: TGrB_BinaryOp): TGrB_Info; cdecl; external libgraphblas;
function GxB_Semiring_add(add: PGrB_Monoid; semiring: TGrB_Semiring): TGrB_Info; cdecl; external libgraphblas;
function GxB_Semiring_multiply(multiply: PGrB_BinaryOp; semiring: TGrB_Semiring): TGrB_Info; cdecl; external libgraphblas;
function GrB_Semiring_free(semiring: PGrB_Semiring): TGrB_Info; cdecl; external libgraphblas;

type
  PGxB_Scalar = ^TGxB_Scalar;
  TGxB_Scalar = Pointer;

  PGrB_Scalar = ^TGrB_Scalar;
  TGrB_Scalar = Pointer;

function GrB_Scalar_new(s: PGrB_Scalar; _type: TGrB_Type): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_dup(s: PGrB_Scalar; t: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_clear(s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_nvals(nvals: PGrB_Index; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_type(_type: PGrB_Type; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_type_name(type_name: pchar; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_memoryUsage(size: Psize_t; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GrB_Scalar_free(s: PGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_new(s: PGrB_Scalar; _type: TGrB_Type): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_dup(s: PGrB_Scalar; t: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_clear(s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_nvals(nvals: PGrB_Index; s: TGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
function GxB_Scalar_free(s: PGrB_Scalar): TGrB_Info; cdecl; external libgraphblas;
